--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .heading-container {
     width: 350px !important;
-    margin: 25px auto 60px;
+    margin: 25px auto 30px;
 }
 
 .heading-container h1 {
@@ -9,7 +9,8 @@
 }
 
 .heading-container .score-container {
-    width: 90px;
+    min-width: 90px;
+    min-height: 108px;
     text-align: center;
     float: right;
     font-weight: 700;
@@ -37,8 +38,8 @@
     margin: 5px 0 0;
     color: #776E65;
     font-size: 20px;
-    position: absolute;
-    right: 55px;
+    position: relative;
+    right: 8px;
 }
 
 .heading-container .score-container .score-added span {
@@ -52,6 +53,7 @@
     padding: 0 15px;
     background-color: #bbada0;
     border-radius: 6px;
+    position: relative;
 }
 
 .react-2048-container .row-panel {
@@ -72,4 +74,18 @@
     border-radius: 3px;
     font-weight: 700;
     font-size: 30px;
+}
+
+.react-2048-container .game-over-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #00000038;
+    top: 0;
+    right: 0;
+    border-radius: 6px;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
 }
